--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -199,6 +199,7 @@
                         android:drawableStart="@drawable/ic_pw"/>
             -->
             <CheckBox
+                android:id="@+id/cb_tos"
                 style="@style/textBodyS"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
@@ -210,6 +211,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
+                android:enabled="false"
                 android:text="@string/sign_up" />
 
         </LinearLayout>
