--- a/app/src/main/res/layout/diagnosis_history_list.xml
+++ b/app/src/main/res/layout/diagnosis_history_list.xml
@@ -78,5 +78,18 @@
             card_view:layout_constraintBottom_toBottomOf="parent"
             card_view:layout_constraintEnd_toEndOf="parent" />
 
+        <TextView
+            android:id="@+id/tv_confidence"
+            style="@style/textBodyS"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:text="0%"
+            card_view:layout_constraintEnd_toEndOf="parent"
+            card_view:layout_constraintHorizontal_bias="1.0"
+            card_view:layout_constraintStart_toEndOf="@+id/rvTitleDiagnosis"
+            card_view:layout_constraintTop_toTopOf="parent" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
